# codonopt

./: README.md  pyproject.toml
codonopt/: __init__.py  checks.py  optimization.py  utils.py
tests/: test_codonopt_ecoli.py  test_codonopt_human.py
